<resources>
    <string name="app_name">WeatherApp</string>
    <string name="city_name">Loading...</string>
    <string name="temperature_num"></string>
    <string name="weather"></string>
    <string name="max_temp_caption">High:\u0020</string>
    <string name="max_temp_num"></string>
    <string name="min_temp_caption">Low:\u0020</string>
    <string name="min_temp_num"></string>
    <string name="humidity_caption">Humidity:\u0020</string>
    <string name="humidity_num"></string>
    <string name="wind_speed_caption">Wind Speed:\u0020</string>
    <string name="wind_speed_num"></string>
    <string name="mock_location_btn">Mock Coordinates</string>
    <string name="date_and_time">Loading...</string>
    <string name="see_favorites">See Favorites</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="weather_of_my_location">Weather of my Location</string>
    <string name="favorites">Favorites</string>
    <string name="see_city">See Weather</string>
    <string name="remove_favorite">Remove</string>
</resources>