<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/city_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/city_name"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/temperature_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/temperature_num"
            android:textSize="64sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/city_name"/>

    <TextView
        android:id="@+id/weather_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weather_caption"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/temperature_num"/>

    <TextView
        android:id="@+id/max_temp_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/max_temp_caption"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/weather_caption"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"/>

    <TextView
        android:id="@+id/max_temp_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/max_temp_num"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/weather_caption"
        app:layout_constraintLeft_toRightOf="@id/max_temp_caption"/>

    <TextView
        android:id="@+id/min_temp_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_temp_caption"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/max_temp_caption"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"/>

    <TextView
        android:id="@+id/min_temp_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_temp_num"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/max_temp_caption"
        app:layout_constraintLeft_toRightOf="@id/min_temp_caption" />

    <TextView
        android:id="@+id/humidity_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity_caption"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/min_temp_caption"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"/>

    <TextView
        android:id="@+id/humidity_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity_num"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/min_temp_caption"
        app:layout_constraintLeft_toRightOf="@id/humidity_caption" />

    <TextView
        android:id="@+id/wind_speed_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind_speed_caption"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/humidity_caption"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"/>

    <TextView
        android:id="@+id/wind_speed_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind_speed_num"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/humidity_caption"
        app:layout_constraintLeft_toRightOf="@id/wind_speed_caption" />
    
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <ImageView
        android:id="@+id/weather_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/wind_speed_num"
        app:layout_constraintLeft_toRightOf="@id/wind_speed_num"
        app:layout_constraintRight_toLeftOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/max_temp_num"
        app:srcCompat="@drawable/example_weather_img"
        tools:src="@drawable/example_weather_img" />

    <Button
        android:id="@+id/mock_location_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mock_location_btn"
        android:textSize="8sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/forecast_data_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:foregroundGravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wind_speed_caption"
        app:layout_constraintVertical_bias="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>