<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/favorite_city_name"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:maxLines="2"
            android:paddingLeft="15dp"
            android:text="@string/city_name"
            android:gravity="center_vertical"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/see_city"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/see_city"
            android:background="#d3d3d3"
            android:layout_marginLeft="3dp"
            android:layout_marginVertical="7dp"
            android:paddingHorizontal="7dp"
            android:gravity="center_vertical"
            android:layout_weight="0"
            app:layout_constraintStart_toEndOf="@id/favorite_city_name"
            app:layout_constraintEnd_toStartOf="@id/remove_favorite"/>

        <ImageButton
            android:id="@+id/remove_favorite"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:text="@string/remove_favorite"
            android:layout_weight="0"
            app:layout_constraintStart_toEndOf="@id/see_city"
            app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>